--- a/styles.css
+++ b/styles.css
@@ -9655,6 +9655,7 @@ input.iconic-circle {
   height: 30px;
   padding: 7px;
   cursor: pointer !important;
+  z-index: 999;
 }
 .iconic-circle.stroke:hover,
 .star:hover {
